ported get started changes to clustered